fix menu position to fixed | remove default z-index

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -24,7 +24,6 @@
     border: none;
     text-decoration: none;
     box-sizing: border-box;
-    z-index: 1;
 }
 
 html {
@@ -82,10 +81,12 @@ header {
     background: rgba(255, 255, 255, 0);
     backdrop-filter: blur(12.4px);
     -webkit-backdrop-fiter: blur(12.4px);
+    z-index: 10;
 }
 
 section {
     width: 100%;
+    text-align: center;
 }
 
 .header-icon {
@@ -118,7 +119,7 @@ section {
 }
 
 .menu-container {
-    position: absolute;
+    position: fixed;
     top: -110%;
     left: 0;
     width: 100%;
@@ -128,7 +129,7 @@ section {
     backdrop-filter: blur(12.4px);
     -webkit-backdrop-fiter: blur(12.4px);
     transition: all ease .6s;
-    z-index: 15;
+    z-index: 20;
     display: flex;
     flex-direction: column;
     align-items: center;
